SportManager/force-app/main/default/objects/Socio__c/Socio__c.object-meta.xml
<CustomObject>
    <label>Socio</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Socio Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Socios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>