SportManager/force-app/main/default/objects/Socio__c/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Socios</relationshipLabel>
    <relationshipName>Socios</relationshipName>
    <type>Lookup</type>
</CustomField>