SportManager/force-app/main/default/objects/Socio__c/fields/Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico__c</fullName>
    <label>Correo electrónico</label>
    <required>true</required>
    <type>Email</type>
</CustomField>