SportManager/force-app/main/default/objects/Socio__c/fields/Fecha_de_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_nacimiento__c</fullName>
    <label>Fecha de nacimiento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>