SportManager/force-app/main/default/objects/Socio__c/fields/Poblacion__c.field-meta.xml
<CustomField>
    <fullName>Poblacion__c</fullName>
    <label>Población</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Poblacion</valueSetName>
    </valueSet>
</CustomField>