SportManager/force-app/main/default/objects/Socio__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Teléfono</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>